--- a/index.html
+++ b/index.html
@@ -47,17 +47,17 @@
                             <div  class="my-thumbnails position-relative">
 
                                 <div v-for="image in images" class="my-thumbnail active">
-                                    <img class="img-fluid" :src="image.url" :alt="images.title">
+                                    <img class="img-fluid" :src="image.url" :alt="image.title">
                                 </div>
 
 
                                 <!-- prev -->
-                                <div class="my-previous position-absolute">
+                                <div class="my-previous position-absolute" @click="prev">
                                     <span class="my-prev-hook"></span>
                                 </div>
                                 <!-- immagini interne -->
                                 <!-- next -->
-                                <div class="my-next position-absolute">
+                                <div class="my-next position-absolute" @click="next">
                                     <span class="my-next-hook"></span>
                                 </div>
                             </div>
